[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/HostAndJoin/HostAndJoin.gd" type="Script" id=1]
[ext_resource path="res://src/Tile/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/montserrat_eb_64.tres" type="DynamicFont" id=3]

[node name="HostAndJoin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.603922, 0.705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -292.0
margin_right = 292.0
margin_bottom = 99.0
text = "Host and Join"

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -170.0
margin_right = 82.5
margin_bottom = 170.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Container"]
margin_right = 165.0
margin_bottom = 252.0
custom_constants/separation = 60

[node name="HostButton" type="Button" parent="Container/VBoxContainer2"]
margin_left = 33.0
margin_right = 132.0
margin_bottom = 44.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "HOST"

[node name="JoinButton" type="Button" parent="Container/VBoxContainer2"]
margin_left = 38.0
margin_top = 104.0
margin_right = 126.0
margin_bottom = 148.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "JOIN"

[node name="SignOut" type="Button" parent="Container/VBoxContainer2"]
margin_top = 208.0
margin_right = 165.0
margin_bottom = 252.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "SIGN OUT"

[node name="Notification" type="Label" parent="Container"]
margin_top = 302.0
margin_right = 165.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Container/VBoxContainer2/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/SignOut" to="." method="_on_SignOut_pressed"]
